HelloUltraviolet/Fixtures/RejectedSource/FFI/NullResultWellFormedness/Expected.uv
//! Expected diagnostic metadata for the NullResultWellFormedness rejected-source specimen.

expectedDiagnostic("E-SEM-2856", "requirement.23.NullResultWellFormedness")
